# Bosch-Azure-Devops-Feb-23

./: CMakeLists.txt  Course-Content.docx  README.md  bosch-users.csv  gtest.py  lab-details.txt
Hands-On/: script.sh
Hands-On/Azure-Devops/: azure-devops-dashboard.md
Hands-On/Docker/: README.md  README.md.sh
Hands-On/GitHub-Actions/: Readme.md
Hands-On/Kubernetes/00-Create-AKS-Cluster/: README.md.sh
Hands-On/Kubernetes/01-Connect-to-AKS-Cluster/: README.md.sh
Hands-On/Kubernetes/02-kubectl-cli/: README.md.sh
Hands-On/Kubernetes/03-resource-and-objects/04-02-PODs-with-YAML/: README.md.sh
Hands-On/Kubernetes/03-resource-and-objects/04-03-Deployments-with-YAML/: README.md.sh
Hands-On/Kubernetes/03-resource-and-objects/04-04-Services-with-YAML/: README.md.sh
Hands-On/Kubernetes/05-multi-container-pod/: README.md.sh
Hands-On/Kubernetes/07-probes-and-health-check/: README.md.sh
Hands-On/ansible/: install-ansible.sh
Hands-On/ansible/1-playbook/: README.md.sh  playbook.yml
Hands-On/ansible/3-dynamic-inventory/: commands.sh  inventory.azure_rm.yml
Hands-On/packer/: commands.sh  ubuntu-test-var.pkr.hcl
Hands-On/terraform/: Install-Azure-CLI.sh  Install-Terraform.sh
Temp/: CMakeLists.txt  gtest.py  test.yml
Temp/googletest/: HowTo_GTest_uLRR.md  README.md  conanfile.py
Temp/googletest/googlemock/include/gmock/: gmock-matchers.h
Temp/googletest/googlemock/src/: gmock-spec-builders.cc
Temp/googletest/googletest/: README.md
Temp/googletest/googletest/cmake/: internal_utils.cmake
Temp/googletest/googletest/include/gtest/internal/: gtest-internal.h
Temp/sample/inc/: sample.h
Temp/sample/src/: sample.c
Temp/sample/test/: CMakeLists.txt  test_sample.cpp
Trainer-Env-Prep/: Setup-Ubuntu.md
(+15 files in other folders)
